@@ -1,5 +1,17 @@
 2018-06-27  Zalan Bujtas  <zalan@apple.com>
 
+        [LFC] Move formatting context root layout logic to a dedicated function.
+        https://bugs.webkit.org/show_bug.cgi?id=187097
+
+        Reviewed by Antti Koivisto.
+
+        * layout/blockformatting/BlockFormattingContext.cpp:
+        (WebCore::Layout::BlockFormattingContext::layout const):
+        (WebCore::Layout::BlockFormattingContext::layoutFormattingContextRoot const):
+        * layout/blockformatting/BlockFormattingContext.h:
+
+2018-06-27  Zalan Bujtas  <zalan@apple.com>
+
         [LFC] Compute static position for out-of-flow elements only when required.
         https://bugs.webkit.org/show_bug.cgi?id=187096
 
